fixed alignment issue in booking

--- a/stylesheets/booking.css
+++ b/stylesheets/booking.css
@@ -791,10 +791,6 @@ address a{
         font-size: .8em;
     }
     
-    footer{
-        flex-direction: column;
-    }
-
     .email input{
         border: 2px solid rgb(255, 255, 255);
         background-color: black;
